# cmake-cxx-template

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.h
